# superx-dash

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cpack.cmake  issues.txt
ci-scripts/: travis-build.sh
debian/: README.Debian  README.source  changelog  control  copyright
src/: CMakeLists.txt
src/package/: metadata.desktop
src/package/contents/config/: main.xml
src/package/contents/ui/: AppGridContainer.qml  AppItem.qml  CategoriesSidebarContainer.qml  CompactRepresentation.qml  Dash.qml  FavoritesContainer.qml  Heading.qml  IconItem.qml  PaginatedGrid.qml  SystemFavoritesContainer.qml  TopContainer.qml  main.qml  tools.js
src/plugin/: CMakeLists.txt  appslist.cpp  appslist.h  qmldir  superxdashplugin.cpp  superxdashplugin.h  systemfavourites.cpp  systemfavourites.h  utils.cpp  utils.h
